--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -93,7 +93,7 @@
           rel="noopener no-referrer"
           >Privacy Policy</a
         >
-        <span>/</span>
+        <span>&nbsp;/&nbsp;</span>
         <a
           href="https://www.freeprivacypolicy.com/live/f925529a-df02-4c84-a792-7b270ee39ee9"
           class="footer-terms link"
