--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
       <div class="logo-box flex">
         <a href="./index.html" class="logo flex">
           <div class="logo-img flex">
-            <svg class="logo-svg">
+            <svg class="logo-svg-header">
               <use href="./images/icons/icons.svg#icon-cabbage"></use>
             </svg>
           </div>
@@ -17,12 +17,14 @@
           <span class="btn-home-text">home</span>
         </a>
         <button class="heder-cart-link js-header-cart ddd">
-          <svg class="heder-cart" width="18" height="18">
+          <svg class="heder-cart" width="14" height="14">
             <use href="./images/icons/icons.svg#icon-shopping-cart"></use>
           </svg>
         </button>
         <p class="heder-cart-text">cart</p>
-        <div class="cart-number-box">(<span class="item-number"></span>)</div>
+        <div class="cart-number-box">
+          &nbsp;(<span class="item-number"></span>)
+        </div>
       </div>
     </nav>
   </div>
