--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,7 +23,7 @@
         </button>
         <p class="heder-cart-text">cart</p>
         <div class="cart-number-box">
-          &nbsp;(<span class="item-number"></span>)
+          &nbsp;(<span class="js-cart-number">0</span>)
         </div>
       </div>
     </nav>
