--- a/src/css/basket.css
+++ b/src/css/basket.css
@@ -1,4 +1,8 @@
-
+#cartTitle {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1.16;
+}
 
 .icon-and-cart {
   display: flex;
@@ -9,8 +13,10 @@
 }
 
 .cart-icon {
+  width: 38px;
+  height: 38px;
   display: flex;
-  padding: 12px;
+
   justify-content: center;
   align-items: center;
   gap: 10px;
@@ -20,9 +26,8 @@
 }
 
 .cart-icon:hover,
-.cart-icon:focus{
+.cart-icon:focus {
   background-color: var(--olive-hover-color);
-
 }
 
 .cart-icon-img {
@@ -62,7 +67,7 @@
   display: flex;
   gap: 8px;
 }
-.flex-cart-js{ 
+.flex-cart-js {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -77,9 +82,7 @@
   position: relative;
 }
 
-
-
-.basket-img-box{
+.basket-img-box {
   padding: 18px;
   display: flex;
   align-items: center;
@@ -89,7 +92,6 @@
   border-radius: 10px;
   background-color: var(--white-color);
 }
-
 
 .product-name {
   color: var(--black-color);
@@ -112,11 +114,9 @@
   line-height: 1.16;
 }
 
-.product-basket-text span{
+.product-basket-text span {
   color: var(--black-color);
 }
-
-
 
 .product-price {
   color: var(--black-color);
@@ -139,39 +139,37 @@
   gap: 8px;
 }
 
-.button-delete-all-box{
+.button-delete-all-box {
   display: flex;
   justify-content: flex-end;
 }
 
-.remove-button{
+.remove-button {
   background-color: transparent;
-    color: var(--black-color);
-    border: none;
-    cursor: pointer;
-    font-size: 14px;
-    line-height: 1.3;
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    right: -10%;
-    
+  color: var(--black-color);
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 1.3;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  right: -10%;
 }
-
 
 /* YOUR ORDER */
 .order-container {
   display: flex;
 }
 
-.order-title{
+.order-title {
   font-size: 24px;
   line-height: 1.16;
 }
 
-.order-summary{
+.order-summary {
   display: flex;
   flex-direction: column;
 }
@@ -199,7 +197,7 @@
   justify-content: flex-end;
 }
 
-.sum-span{
+.sum-span {
   font-size: 24px;
   font-weight: 500;
   line-height: 1.16;
@@ -231,13 +229,11 @@
   font-size: 14px;
   line-height: 1.3;
   height: 42px;
-
 }
 
 .checkout-button:hover {
   background-color: #4d602b;
 }
-
 
 /* VECTOR */
 .product-cart-js::after {
@@ -253,132 +249,123 @@
   margin-top: 70px;
 }
 
-
-
-@media screen and (max-width: 375px){
-  .order-summary{
+@media screen and (max-width: 375px) {
+  .order-summary {
     max-width: 100%;
   }
 
-  .summary-box{
+  .summary-box {
     max-width: 100%;
   }
 
-    .product-cart-js::after{
-      max-width: 100%;
-    }
-
-   .checkout-button{
+  .product-cart-js::after {
     max-width: 100%;
-   }
+  }
 
-     .basket-img-box{
-      max-width: 100%;
-      max-height: 100%;
-     }
+  .checkout-button {
+    max-width: 100%;
+  }
 
-   .remove-button{
-   right: 0;
-   }  
+  .basket-img-box {
+    max-width: 100%;
+    max-height: 100%;
+  }
 
+  .remove-button {
+    right: 0;
+  }
 }
-
 
 @media screen and (min-width: 768px) {
+  .cart-icon {
+    width: 42px;
+    height: 42px;
+  }
+
   .product-cart-js::after {
-    width: 672px; 
+    width: 672px;
     margin-top: 80px;
   }
-    .flex-cart-js {
-      display: flex;
-      align-items: baseline;
-    
-    
-    }
+  .flex-cart-js {
+    display: flex;
+    align-items: baseline;
+  }
 
-    .product-cart-js{
-      width: 672px;
-      margin-bottom: 100px;
-    }
+  .product-cart-js {
+    width: 672px;
+    margin-bottom: 100px;
+  }
 
-    .order-title{
-      font-size: 32px;
-      line-height: 1;
-    }
+  .order-title {
+    font-size: 32px;
+    line-height: 1;
+  }
 
-    .summary-box{
-      width: 590px;
-    }
+  .summary-box {
+    width: 590px;
+  }
 
-    .email-and-checkout{
-      flex-direction: row;
-      justify-content: space-between;
+  .email-and-checkout {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 
-    }
+  .email-input {
+    font-size: 18px;
+    width: 335px;
+  }
 
-    .email-input{
-      font-size: 18px;
-      width: 335px;
-    }
+  .checkout-button {
+    width: 215px;
+    font-size: 20px;
+  }
 
-    .checkout-button{
-      width: 215px;
-      font-size: 20px;
-    }
+  .delete-all-button {
+    font-size: 16px;
+  }
 
-    .delete-all-button{
-      font-size: 16px;
+  .product-name {
+    font-size: 20px;
+    line-height: 1.2;
+  }
+  .button-delete-all-box {
+    width: 672px;
+  }
 
-    }
+  .remove-button {
+    right: 0;
+  }
 
-    .product-name{
-      font-size: 20px;
-      line-height: 1.2;
-    }
-   .button-delete-all-box{
-      width: 672px;
-    }
-
-    .remove-button{
-      right: 0;
-    }
-
-    .product-basket-text span{
+  .product-basket-text span {
     font-size: 14px;
-}
+  }
 
-.product-price{
-font-size: 20px;
-line-height: 1.2;
+  .product-price {
+    font-size: 20px;
+    line-height: 1.2;
+  }
 }
-
-}
-
 
 @media screen and (min-width: 1440px) {
   .product-cart-js::after {
     width: 500px;
   }
 
-  .product-cart-js{
+  .product-cart-js {
     width: 500px;
   }
 
   .product-image {
-
   }
 
   .flex-cart-js {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: normal;
-   
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: normal;
   }
 
-
-        .button-delete-all-box {
-          width: 500px;
-        }
-
+  .button-delete-all-box {
+    width: 500px;
+  }
 }
