--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -2,12 +2,14 @@
   <section class="section-empty-basket">
     <div class="icon-and-cart">
       <button type="button" class="cart-icon">
-        <svg class="cart-icon-img" width="100" height="16">
+        <svg class="cart-icon-img" width="18" height="18">
           <use href="./images/icons/icons.svg#icon-shopping-cart"></use>
         </svg>
       </button>
       <div class="cart-info">
-        <h1 id="cartTitle">Cart (0)</h1>
+        <h1 id="cartTitle">
+          Cart&nbsp;(<span class="js-cart-number">0</span>)
+        </h1>
       </div>
     </div>
     <div class="button-delete-all-box">
