--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,14 +16,16 @@
         <a href="./index.html" class="btn-home flex">
           <span class="btn-home-text">home</span>
         </a>
-        <button class="heder-cart-link js-header-cart ddd">
+
+        <a href="./cart.html" class="heder-cart-link js-header-cart ddd">
           <svg class="heder-cart" width="14" height="14">
             <use href="./images/icons/icons.svg#icon-shopping-cart"></use>
           </svg>
-        </button>
+        </a>
+
         <p class="heder-cart-text">cart</p>
         <div class="cart-number-box">
-          &nbsp;(<span class="item-number"></span>)
+          &nbsp;(<span class="js-cart-number">0</span>)
         </div>
       </div>
     </nav>
