fix container cards basket

--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -21,7 +21,7 @@
       </button>
     </div>
     <div class="flex-cart-js">
-      <div class="product-cart-js">
+      <!-- <div class="product-cart-js">
         <div class="basket-img-box">
           <img src="${img}" alt="${name}" class="product-image" />
         </div>
@@ -42,7 +42,7 @@
           </div>
           <p class="product-price">${price}</p>
         </div>
-      </div>
+      </div> -->
 
       <div class="order-summary">
         <h1 class="order-title">YOUR ORDER</h1>
