add scroll discount

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,7 +17,7 @@
           <span class="btn-home-text">home</span>
         </a>
 
-        <a href="./cart.html" class="heder-cart-link js-header-cart ddd">
+        <a href="./cart.html" class="heder-cart-link js-header-cart">
           <svg class="heder-cart" width="14" height="14">
             <use href="./images/icons/icons.svg#icon-shopping-cart"></use>
           </svg>
