--- a/src/css/components.css
+++ b/src/css/components.css
@@ -17,6 +17,10 @@ li {
 button {
   border: none;
 }
+.button-disabled {
+  opacity: 0.65;
+  pointer-events: none;
+}
 .visually-hidden {
   position: absolute;
   width: 1px;
