--- a/src/css/popular-products.css
+++ b/src/css/popular-products.css
@@ -100,10 +100,9 @@
     height: 100%;
   }
 
-    .popular-products-container{
-      max-width: 100%;
-    }
-
+  .popular-products-container {
+    max-width: 100%;
+  }
 
   .popular-products-item {
     max-width: 100%;
@@ -142,13 +141,13 @@
     flex-basis: calc((100% - 13px) / 2);
   }
 
-    .popular-products-item:hover,
-    .popular-products-item:focus{
+  .popular-products-item:hover,
+  .popular-products-item:focus {
     box-shadow: 0px 9.1px 16.53437px 0px rgba(0, 0, 0, 0.02),
-        0px 41.6px 46.475px 0px rgba(0, 0, 0, 0.04),
-        0px 105.3px 124.67812px 0px rgba(0, 0, 0, 0.05),
-        0px 208px 286px 0px rgba(0, 0, 0, 0.07);
-    }
+      0px 41.6px 46.475px 0px rgba(0, 0, 0, 0.04),
+      0px 105.3px 124.67812px 0px rgba(0, 0, 0, 0.05),
+      0px 208px 286px 0px rgba(0, 0, 0, 0.07);
+  }
 }
 
 @media screen and (min-width: 1440px) {
@@ -162,4 +161,11 @@
   .popular-products-item {
     width: 275px;
   }
+}
+
+.icon-popular-discount {
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translateY(-35%) translateX(10%);
 }
