--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -68,7 +68,7 @@
             >
             <input
               id="email"
-              class="footer-input"
+              class="footer-input reset-autofill"
               type="email"
               name="email"
               placeholder="Email"
