--- a/src/css/basket.css
+++ b/src/css/basket.css
@@ -1,3 +1,14 @@
+.reset-autofill-cart:-webkit-autofill::first-line,
+.reset-autofill-cart:-webkit-autofill,
+.reset-autofill-cart:-webkit-autofill:hover,
+.reset-autofill-cart:-webkit-autofill:focus,
+.reset-autofill-cart:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0px 30px transparent inset;
+  transition: background-color 5000s ease-in-out 0s;
+  /* caret-color: var(--background-color); */
+  font-family: 'Neue Montreal', sans-serif !important;
+}
+
 #cartTitle {
   font-size: 24px;
   font-weight: 500;
@@ -204,7 +215,7 @@
 }
 
 .email-input {
-  padding: 10px;
+  padding: 10px 20px;
   font-size: 14px;
   line-height: 1.3;
   border-radius: 30px;
@@ -212,6 +223,13 @@
   background-color: transparent;
   max-width: 335px;
   height: 42px;
+  width: 100%;
+  outline: none;
+  transition: border var(--default-tranzition);
+}
+
+.email-input:is(:hover, :focus) {
+  border: 1px solid #6d8434;
 }
 
 .checkout-button {
@@ -307,7 +325,7 @@
 
   .email-and-checkout {
     flex-direction: row;
-    justify-content: space-between;
+    /* justify-content: space-between; */
   }
 
   .email-input {
