--- a/src/css/discount-products.css
+++ b/src/css/discount-products.css
@@ -36,8 +36,8 @@
 }
 .icon-discount {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: -5px;
+  right: -20px;
   transform: translateY(-35%) translateX(10%);
 }
 .discount-card-text {
@@ -117,14 +117,13 @@
     gap: 32px;
   }
 
-   .discount-products-item:hover,
-   .discount-products-item:focus{
+  .discount-products-item:hover,
+  .discount-products-item:focus {
     box-shadow: 0px 9.1px 16.53437px 0px rgba(0, 0, 0, 0.02),
-        0px 41.6px 46.475px 0px rgba(0, 0, 0, 0.04),
-        0px 105.3px 124.67812px 0px rgba(0, 0, 0, 0.05),
-        0px 208px 286px 0px rgba(0, 0, 0, 0.07);
-
-   }
+      0px 41.6px 46.475px 0px rgba(0, 0, 0, 0.04),
+      0px 105.3px 124.67812px 0px rgba(0, 0, 0, 0.05),
+      0px 208px 286px 0px rgba(0, 0, 0, 0.07);
+  }
 }
 
 @media screen and (min-width: 1440px) {
