count- sum-cart

--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -49,7 +49,7 @@
         <div class="summary-box">
           <p class="product-name">Total</p>
           <p class="product-basket-text">
-            Sum:<span class="sum-span">${sum}</span>
+            Sum:<span class="sum-span">$0</span>
           </p>
         </div>
 
