--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -20,30 +20,8 @@
         </svg>
       </button>
     </div>
-    <div class="flex-cart-js">
-      <!-- <div class="product-cart-js">
-        <div class="basket-img-box">
-          <img src="${img}" alt="${name}" class="product-image" />
-        </div>
-        <div class="product-details">
-          <button class="remove-button">
-            <svg class="icon-remove" width="18" height="18">
-              <use href="./images/icons/icons.svg#icon-close-sharp"></use>
-            </svg>
-          </button>
-          <h2 class="product-name">${name}</h2>
-          <div class="cart-product-box">
-            <p class="product-basket-text">
-              Category: <span class="category-slyle">${category}</span>
-            </p>
-            <p class="product-basket-text">
-              Size: <span class="size-slyle">${size}</span>
-            </p>
-          </div>
-          <p class="product-price">${price}</p>
-        </div>
-      </div> -->
-
+    <div class="basket-content-box">
+      <div class="flex-cart-js"></div>
       <div class="order-summary">
         <h1 class="order-title">YOUR ORDER</h1>
         <div class="summary-box">
