--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -31,16 +31,16 @@
         <select
           class="home_categorias-sort"
           id="searchParams2"
-          name="searchSort"
+          name="sort"
         >
-          <option value="byABC=true" data-placeholder="true"></option>
+          <option data-placeholder="true"></option>
           <option value="byABC=true">A-Z</option>
           <option value="byABC=false">Z-A</option>
           <option value="byPrice=true">Cheap</option>
           <option value="byPrice=false">Expensive</option>
           <option value="byPopularity=false">Popular</option>
           <option value="byPopularity=true">Not popular</option>
-          <option value="">Show All</option>
+          <option value="byABC=true">Show All</option>
         </select>
       </div>
     </div>
