--- a/src/css/basket.css
+++ b/src/css/basket.css
@@ -9,6 +9,125 @@
   font-family: 'Neue Montreal', sans-serif !important;
 }
 
+/* ------------------------------MOBILE 320-374px */
+@media screen and (max-width: 374px) {
+  .flex-cart-js {
+    height: 400px;
+  }
+  .order-summary {
+    max-width: 100%;
+  }
+
+  .summary-box {
+    max-width: 100%;
+  }
+
+  .product-cart-js::after {
+    max-width: 100%;
+  }
+
+  .product-cart-js {
+    align-items: center;
+    align-items: start;
+  }
+
+  .checkout-button {
+    max-width: 100%;
+  }
+
+  .category {
+    width: 105px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .size {
+    width: 80px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .basket-img-box {
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 70px;
+    height: 70px;
+    border-radius: 10px;
+    background-color: var(--white-color);
+  }
+  .cart-product-box {
+    margin-bottom: 20px;
+  }
+  .product-name {
+    font-size: 16px;
+  }
+}
+
+/* ----------------------------------MOBILE common  and 375px - 767px */
+
+.product-name {
+  margin-bottom: 10px;
+}
+
+.cart-minus,
+.cart-plus {
+  stroke: black;
+}
+
+.price-and-counter-wrapper {
+  display: flex;
+  /* flex-direction: row; */
+  justify-content: space-between;
+}
+.counter-box {
+  display: flex;
+  gap: 6px;
+  justify-content: center;
+  border-radius: 100px;
+  border: 1px solid rgba(1, 1, 1, 0.1);
+  min-width: 74px;
+}
+
+.item-decrease-counter,
+.item-increase-counter {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+}
+
+.item-decrease-counter {
+  border-top-left-radius: 100px;
+  border-bottom-left-radius: 100px;
+  padding-left: 10px;
+  justify-content: right;
+}
+
+.item-increase-counter {
+  border-bottom-right-radius: 100px;
+  border-top-right-radius: 100px;
+  padding-right: 10px;
+  justify-content: left;
+}
+
+.remove-button {
+  position: absolute;
+  background-color: transparent;
+  color: var(--black-color);
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 1.3;
+  font-weight: 500;
+  bottom: 83%;
+  right: 0;
+}
+
 .section-empty-basket {
   padding-top: 72px;
   padding-bottom: 80px;
@@ -20,29 +139,21 @@
   line-height: 1.16;
 }
 
-.order-title{
-
-}
-
 .icon-and-cart {
   display: flex;
   align-items: center;
-  /* margin-top: 89px; */
   gap: 14px;
-  /* margin-bottom: 22px; */
 }
 
 .cart-icon {
   width: 38px;
   height: 38px;
   display: flex;
-
   justify-content: center;
   align-items: center;
-  /* gap: 10px; */
   border-radius: 30px;
   cursor: pointer;
-  background-color: #6d8434;
+  background-color: var(--olive-color);
 }
 
 .cart-icon:hover,
@@ -51,8 +162,6 @@
 }
 
 .cart-icon-img {
-  /* width: 18px;
-  height: 18px; */
   fill: var(--background-color);
 }
 
@@ -70,12 +179,6 @@
   visibility: hidden;
 }
 
-/* .cart-content img {
-  width: 150px;
-  height: 150px;
-  display: inline;
-} */
-
 .empty-message {
   color: var(--black-color);
   margin-top: 40px;
@@ -88,49 +191,56 @@
   display: flex;
   gap: 8px;
 }
-.flex-cart-js {
-  /* display: flex;
-  align-items: center;
-  flex-direction: column; */
-}
 
 .product-cart-js {
   position: relative;
   display: flex;
-  margin-bottom: 80px;
-  padding-top: 30px;
-  gap: 20px;
-  position: relative;
+  gap: 8px;
 }
 
-.basket-img-box {
-  padding: 18px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100px;
-  height: 100px;
-  border-radius: 10px;
-  background-color: var(--white-color);
+.product-cart-js:not(:first-child) {
+  margin-top: 30px;
 }
 
+.product-cart-js:not(:last-child) {
+  padding-bottom: 30px;
+}
+
+@media screen and (min-width: 375px) {
+  .product-cart-js {
+    gap: 20px;
+  }
+
+  .basket-img-box {
+    padding: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    background-color: var(--white-color);
+  }
+  .cart-product-box {
+    margin-bottom: 36px;
+  }
+}
+
+.product-name-total,
 .product-name {
   color: var(--black-color);
   font-size: 18px;
   line-height: 1.11;
   font-weight: 500;
-  /* margin-bottom: 10px; */
 }
 
 .cart-product-box {
   display: flex;
   align-items: center;
   gap: 8px;
-  margin-bottom: 36px;
 }
 
 .product-basket-text {
-  /* color: rgba(1, 1, 1, 0.3); */
   color: rgba(1, 1, 1, 0.2);
   font-size: 12px;
 
@@ -171,23 +281,13 @@
 
 .button-delete-all-box {
   margin-top: 22px;
+  margin-bottom: 30px;
   display: flex;
   justify-content: flex-end;
 }
 
-.remove-button {
-  background-color: transparent;
-  color: var(--black-color);
-  border: none;
-  cursor: pointer;
-  font-size: 14px;
-  line-height: 1.3;
-  font-weight: 500;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  right: 0;
+.product-details {
+  position: relative;
 }
 
 /* YOUR ORDER */
@@ -204,6 +304,7 @@
 .order-summary {
   display: flex;
   flex-direction: column;
+  margin-top: 74px;
 }
 .summary-box {
   border-radius: 8px;
@@ -215,7 +316,8 @@
   align-items: last baseline;
   display: flex;
 
-  padding: 26px 18px 14px 18px;
+  padding: 18px;
+  padding-bottom: 14px;
   margin-top: 40px;
 }
 
@@ -245,24 +347,17 @@
   border: 1px solid rgba(1, 1, 1, 0.3);
   background-color: transparent;
   max-width: 335px;
-  /* height: 42px; */
   width: 100%;
   outline: none;
   transition: border var(--default-tranzition);
-}
-
-.email-input:is(:hover, :focus) {
-  border: 1px solid #6d8434;
 }
 
 .checkout-button {
   padding: 12px 0;
   display: inline-flex;
   font-size: 20px;
-  /* padding: 15px 65px; */
   justify-content: center;
   align-items: center;
-  /* gap: 10px; */
   border-radius: 30px;
   background: #6d8434;
   color: #fff;
@@ -271,7 +366,6 @@
   width: 335px;
   font-size: 14px;
   line-height: 1.3;
-  /* height: 42px; */
 }
 
 .checkout-button:hover {
@@ -279,11 +373,12 @@
 }
 
 /* VECTOR */
-.product-cart-js::after {
+
+.product-cart-js:not(:last-child)::after {
   content: '';
   position: absolute;
   display: block;
-  top: 80%;
+  bottom: 0;
   width: 335px;
   height: 1px;
   background-color: rgba(1, 1, 1, 0.1);
@@ -291,48 +386,27 @@
   margin-top: 70px;
 }
 
-@media screen and (max-width: 375px) {
-  .order-summary {
-    max-width: 100%;
-  }
-
-  .summary-box {
-    max-width: 100%;
-  }
-
-  .product-cart-js::after {
-    max-width: 100%;
-  }
-
-  .checkout-button {
-    max-width: 100%;
-  }
-
-  .basket-img-box {
-    max-width: 100%;
-    max-height: 100%;
-  }
-
-  .remove-button {
-    right: 0;
-  }
-
-  .category {
-    width: 105px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-
-  .size {
-    width: 80px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
+.flex-cart-js {
+  overflow-y: scroll;
+  padding: 8px;
 }
-/* ----------------------------------------------------------- */
+/* -----------------------------------TAB------------------------ */
+
 @media screen and (min-width: 768px) {
+  .item-decrease-counter:is(:hover, :focus) .cart-minus,
+  .item-increase-counter:is(:hover, :focus) .cart-plus {
+    stroke: #6d8434;
+  }
+
+  .cart-plus,
+  .cart-minus {
+    transition: stroke var(--default-tranzition);
+  }
+
+  .email-input:is(:hover, :focus) {
+    border: 1px solid #6d8434;
+  }
+
   .section-empty-basket {
     padding-top: 107px;
     padding-bottom: 100px;
@@ -355,7 +429,6 @@
     width: 672px;
     margin-top: 80px;
   }
-  
 
   .product-cart-js {
     width: 672px;
@@ -423,7 +496,7 @@
     width: auto;
   }
 
-  .order-summary{
+  .order-summary {
     width: 590px;
   }
 }
@@ -437,18 +510,12 @@
     width: 500px;
   }
 
-  .product-image {
-  }
-
-  .flex-cart-js {
-  }
-
   .button-delete-all-box {
     width: 500px;
   }
 
-    .basket-content-box{
-      display: flex;
-      justify-content: space-between;
-    }
+  .basket-content-box {
+    display: flex;
+    justify-content: space-between;
+  }
 }
