--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -25,7 +25,7 @@
       <div class="order-summary">
         <h1 class="order-title">YOUR ORDER</h1>
         <div class="summary-box">
-          <p class="product-name">Total</p>
+          <p class="product-name-total">Total</p>
           <p class="product-basket-text">
             Sum:&nbsp;&nbsp;<span class="sum-span">$0</span>
           </p>
@@ -46,9 +46,9 @@
           <button class="checkout-button js-submit-btn-cart">Checkout</button>
         </form>
       </div>
-    </div>
+    
 
-    <div class="cart-content" id="cartContent">
+    <div class="cart-content visually-hidden" id="cartContent">
       <img src="./images/basket-2x.png" alt="Basket Image" />
       <p class="empty-message" id="emptyMessage">
         Your basket is<span style="color: #6d8434"> empty ...</span>
@@ -61,3 +61,9 @@
     </div>
   </div>
 </section>
+
+
+
+
+
+ 
