--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -48,13 +48,13 @@
       </div>
     
 
-    <div class="cart-content visually-hidden" id="cartContent">
-      <img src="./images/basket-2x.png" alt="Basket Image" />
-      <p class="empty-message" id="emptyMessage">
+    <div class="empty-cart-content-js visually-hidden" id="cartContent">
+      <img src="./images/basket-2x.png" alt="Basket Image" class="basket-image"/>
+      <p class="first-empty-message" id="emptyMessage">
         Your basket is<span style="color: #6d8434"> empty ...</span>
       </p>
 
-      <p>
+      <p class="second-empty-message">
         Go to the main page to select your favorite <br />products and add them
         to the cart<br />
       </p>
