--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -1,7 +1,7 @@
 <section class="section-empty-basket">
   <div class="container">
     <div class="icon-and-cart">
-      <button type="button" class="cart-icon">
+      <button type="button" class="cart-icon" id="cart-icon-btn">
         <svg class="cart-icon-img" width="18" height="18">
           <use href="./images/icons/icons.svg#icon-shopping-cart"></use>
         </svg>
@@ -27,7 +27,7 @@
         <div class="summary-box">
           <p class="product-name-total">Total</p>
           <p class="product-basket-text">
-            Sum:&nbsp;&nbsp;<span class="sum-span">$0</span>
+            Sum:&nbsp;&nbsp;<span class="sum-span" id="sum-important">$0</span>
           </p>
         </div>
 
