--- a/src/css/basket.css
+++ b/src/css/basket.css
@@ -191,39 +191,19 @@
   line-height: 32px;
   text-transform: uppercase;
 }
-/* !empty cart */
 
-.empty-cart-content-js {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 105px;
-  margin-bottom: 40px;
-}
+.cart-content {
+  text-align: center;
+  margin-top: 50px;
 
-.visually-hidden {
+  /* IMPORTANT!!! */
   visibility: hidden;
 }
 
-.basket-image {
-  width: 132px;
-  height: 114px;
-}
-
-.first-empty-message {
+.empty-message {
   color: var(--black-color);
-  margin-top: 28px;
+  margin-top: 40px;
   margin-bottom: 14px;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 1.11;
-}
-
-.second-empty-message {
-  color: rgba(1, 1, 1, 0.7);
-  text-align: center;
-  font-size: 14px;
-  line-height: 18px;
 }
 
 /* PRODUCTS IN THE BASKET */
@@ -425,7 +405,7 @@
 }
 
 /*  --------------------------МОБ від 375 */
-@media screen and (min-width: 375px) {
+@media screen and (min-width: 375px) and (max-width: 1439px) {
   .product-details {
     width: 100%;
     max-width: 500px;
@@ -582,32 +562,10 @@
     width: 590px;
   }
 
-  /* Empty cart content */
-  .empty-cart-content-js {
-    margin-top: 135px;
-    margin-bottom: 20px;
-  }
-
-  .basket-image {
-    width: 164px;
-    height: 140px;
-  }
-
-  .first-empty-message {
-    font-size: 20px;
-    line-height: 1.2;
-  }
-
-  .second-empty-message {
-    font-size: 18px;
-    line-height: 1.33;
+  .cart-product-box {
+    margin-bottom: 46px;
   }
 }
-
-.cart-product-box {
-  margin-bottom: 46px;
-}
-
 /* ------------------------------desk */
 @media screen and (min-width: 1440px) {
   .product-cart-js {
@@ -626,17 +584,12 @@
     padding-right: 40px;
   }
   .button-delete-all-box {
-    max-width: 514px;
+    /* max-width: 514px; */
+    max-width: calc(100% - 60%);
   }
 
   .section-empty-basket {
     padding-top: 90px;
-  }
-
-  /* empty cart */
-  .empty-cart-content-js {
-    margin-top: 155px;
-    margin-bottom: 50px;
   }
 }
 
