cart-toggle-empty

--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -12,6 +12,7 @@
         </h1>
       </div>
     </div>
+    <div class="cart-wrapper-js  visually-hidden">
     <div class="button-delete-all-box">
       <button class="delete-all-button">
         Delete All
@@ -46,8 +47,8 @@
           <button class="checkout-button js-submit-btn-cart">Checkout</button>
         </form>
       </div>
-    
-
+    </div>
+ </div>
     <div class="empty-cart-content-js visually-hidden" id="cartContent">
       <img src="./images/basket-2x.png" alt="Basket Image" class="basket-image"/>
       <p class="first-empty-message" id="emptyMessage">
@@ -59,7 +60,7 @@
         to the cart<br />
       </p>
     </div>
-  </div>
+ 
 </section>
 
 
