--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -71,5 +71,10 @@
         to the cart<br />
       </p>
     </div>
-  </div>
 </section>
+
+<div class="cart-backdrop visually-hidden" data-modal-cart>
+  <div class="cart-modal">
+    <button class="cart-btn-ok footer-btn-ok data-modal-close" data-modal-close-cart>OK</button>
+  </div>
+ </div>
