--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -106,7 +106,7 @@
   </div>
 </footer>
 <div class="footer-backdrop is-hidden" data-modal-footer>
-  <div class="footer-modal footer-mob-modal">
+  <div class="footer-modal">
     <!-- <button class="footer-modal-close-btn" type="button" data-modal-close>
       <svg class="footer-modal-icon" width="22" height="22">
         <use href="./images/icons/icons.svg#icon-close-sharp"></use>
