--- a/src/css/basket.css
+++ b/src/css/basket.css
@@ -9,6 +9,17 @@
   font-family: 'Neue Montreal', sans-serif !important;
 }
 
+/* --------------------MODAL  */
+
+.js-submit-btn-cart:disabled {
+  cursor: not-allowed;
+}
+
+.js-submit-btn-cart:disabled:hover {
+  cursor: not-allowed;
+  background-color: var(--olive-color);
+}
+/* --------------------  */
 .flex-cart-js {
   max-height: 448px;
 }
@@ -164,17 +175,6 @@
   display: flex;
   align-items: center;
   gap: 14px;
-}
-
-.cart-icon {
-  /* width: 38px;
-  height: 38px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 30px;
-  cursor: pointer;
-  background-color: var(--olive-color); */
 }
 
 .cart-icon:hover,
